# amplifier-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  install.sh  package.json  pnpm-lock.yaml  pyproject.toml
.amplifier/digital-twin-universe/profiles/: amplifier-agent-host-config-pr27.yaml
.github/workflows/: ci.yml  install-script.yml  publish-wrapper.yml  release-notes.yml
docs/: LAYERS_AND_RELEASES.md  configuration.md
docs/architecture/: amplifier-as-agent-presentation.html
docs/decisions/: 2026-05-18-cache-serialization.md
docs/designs/: 2026-05-19-baked-in-bundle-decision.md  2026-05-19-baked-in-bundle-revisit.md  2026-05-20-aaa-v2-wrapper-and-wire.md  2026-05-24-aaa-v2-mode-a-pivot-amendment.md  2026-06-01-drop-host-capabilities.md  2026-06-01-host-config-layer-revisit.md  2026-06-09-workspace-resolution-and-migration.md  2026-06-11-drop-xdg-and-flag-cleanup.md
docs/plans/: 2026-05-18-aaa-v2-phase-1-engine-lib.md  2026-05-18-aaa-v2-phase-2-cli-mode-a.md  2026-05-18-aaa-v2-phase-3-cli-mode-b.md  2026-05-18-aaa-v2-phase-4-bundle-cache.md  2026-05-19-aaa-mode-a-real-engine-wiring.md  2026-05-19-baked-in-bundle-impl-phase-1.md  2026-05-19-baked-in-bundle-impl-phase-2.md  2026-05-19-baked-in-bundle-impl-phase-3.md  2026-05-20-phase-2-0c-engine-gap-fixes.md  2026-05-20-phase-2-1-wire-spec-hardening.md  2026-05-24-mode-a-pivot-phase-a-engine.md  2026-05-24-mode-a-pivot-phase-b-wrapper-conformance.md  2026-05-24-mode-a-pivot-phase-c-nc-rebuild.md  2026-06-01-drop-host-capabilities-implementation.md  2026-06-01-host-config-layer-implementation.md  2026-06-02-skills-block-host-config-implementation.md  2026-06-02-skills-block-recovery-plan.md
docs/status/: amplifier-as-agent-design-checkpoint.md
docs/test-docs/: CHEATSHEET.md
presentation-assets/: amplifier-agent-deck-pro.html  amplifier-agent-deck-v3.html  amplifier-agent-deck.html
src/amplifier_agent_cli/: __init__.py  __main__.py  provider_detect.py  provider_sources.py  tty_detect.py
src/amplifier_agent_cli/admin/: __init__.py  auth.py  cache_clear.py  config_show.py  doctor.py  migrate.py  models.py  prepare.py  providers.py  serve.py  update.py  verify.py  version_info.py
src/amplifier_agent_cli/modes/: __init__.py  single_turn.py  stdio_loop.py
src/amplifier_agent_http/: __init__.py  _auth.py  _config.py  _event_translator.py  _host_tool_signal.py  _reconciler.py  _session_runner.py  _wire.py  app.py
src/amplifier_agent_lib/: __init__.py  _runtime.py  engine.py  jsonrpc.py  migration.py  persistence.py  post_install.py  session_store.py  spawn.py  wire_approval_provider.py
tests/: conftest.py  test_admin_cache_clear.py  test_admin_doctor_cache.py  test_admin_doctor_phase2.py  test_bundle_agents.py  test_bundle_cache.py  test_bundle_default_provider.py  test_bundle_hook_streaming.py  test_bundle_loader.py  test_bundle_packaging.py  test_cheatsheet_first_run_cost.py  test_cli_version_subcommand.py  test_defaults_stdio.py  test_e2e_install_and_run.py  test_engine.py  test_engine_version_skew.py  test_engine_with_real_bundle.py  test_jsonrpc.py  test_l14_synthesis.py  test_migration.py  test_persistence.py  test_persistence_workspaces.py  test_phase_2_1_exit_gate.py  test_post_install.py  test_protocol_capabilities.py  test_protocol_conformance_fixtures.py  test_protocol_errors.py  test_protocol_gen.py  test_protocol_gen_staleness.py  test_protocol_methods.py  test_protocol_notifications.py  test_protocol_points_base.py  test_protocol_points_defaults_cli.py  test_protocol_version_bump.py  test_resume_continuity.py  test_runtime.py  test_runtime_audit_path.py  test_runtime_config_merge.py  test_runtime_hook_mount.py  test_runtime_initialize_cwd.py  (+13 more)
tests/bundle/: test_tool_skills_declared.py
tests/cli/: test_admin_migrate.py  test_admin_models.py  test_admin_prepare.py  test_admin_verify.py  test_argv_validation.py  test_cache_clear.py  test_config_show.py  test_credential_resolution.py  test_default_provider_fallback.py  test_delegation_e2e.py  test_doctor.py  test_drop_host_capabilities.py  test_end_to_end.py  test_main_dispatch.py  test_mode_a_audit_trail.py  test_mode_a_integration.py  test_mode_a_stdout_discipline.py  test_mode_a_v2_envelope.py  test_mode_a_v2_real_binary.py  test_package_imports.py  test_provider_catalog.py  test_provider_detect.py  test_provider_detect_removed.py  test_provider_sources.py  test_providers_list.py  test_single_turn.py  test_single_turn_init_params.py  test_stdio_loop_dispatch.py  test_stdio_loop_handshake.py  test_stdio_loop_subprocess.py  test_tty_detect.py  test_update_command.py
tests/config/: test_integration.py  test_loader.py  test_merger.py
tests/http/: test_lifespan_providers.py  test_reconciler.py  test_serve_auto_enable.py  test_session_id_fallback.py
tests/integration/: test_audit_e2e.py  test_migration_e2e.py  test_workspace_e2e.py
wrappers/conformance/: package.json  runner_py.py
wrappers/python/: pyproject.toml  pyrightconfig.json
wrappers/python-py/: README.md  pyproject.toml
wrappers/python-py/examples/: README.md  async_chat.py  diagnostic.py  sync_chat.py
wrappers/python-py/src/amplifier_agent_py/: __init__.py  _api.py  argv_builder.py  errors.py  mcp_spill.py  run_output_parser.py  session.py  spawn.py  sync.py  transport.py  types.py  version.py
wrappers/python-py/tests/conformance/: README.md  test_engine_envelope.py  test_engine_ndjson_stream.py
wrappers/python-py/tests/unit/: test_argv_builder.py  test_run_output_parser.py  test_spawn.py  test_sync_teardown.py  test_version_check.py
wrappers/python/src/amplifier_agent_client/: __init__.py  approval.py  argv_builder.py  jsonrpc.py  l14.py  mcp_spill.py  session.py  spawn.py  types.py  version.py
wrappers/python/tests/: test_approval.py  test_argv_builder.py  test_jsonrpc.py  test_l14.py  test_mcp_spill.py  test_run_output_parser.py  test_smoke.py  test_spawn.py  test_spawn_agent.py  test_types.py  test_version.py
wrappers/typescript/: .npmignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
wrappers/typescript/src/: index.ts  (+12 more)
(+114 files in other folders)
