[project]
name = 'amplifier-agent'
version = '0.0.0'
requires-python = '>=3.12'
license = 'MIT'
dependencies = [
    'click>=8.1',
    'amplifier-foundation',
]

[project.scripts]
amplifier-agent = "amplifier_agent_cli.__main__:main"
amplifier-agent-post-install = "amplifier_agent_lib.post_install:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_agent_cli", "src/amplifier_agent_lib"]

[tool.hatch.build.targets.wheel.force-include]
"src/amplifier_agent_lib/bundle/bundle.md" = "amplifier_agent_lib/bundle/bundle.md"
"src/amplifier_agent_lib/bundle/agents/explorer.md" = "amplifier_agent_lib/bundle/agents/explorer.md"
"src/amplifier_agent_lib/bundle/agents/planner.md" = "amplifier_agent_lib/bundle/agents/planner.md"
"src/amplifier_agent_lib/bundle/agents/coder.md" = "amplifier_agent_lib/bundle/agents/coder.md"
"src/amplifier_agent_lib/bundle/agents/tester.md" = "amplifier_agent_lib/bundle/agents/tester.md"

[tool.uv.workspace]
members = ['packages/amplifier-agent', 'packages/amplifier-agent-session-spawner']

[tool.uv.sources]
amplifier-foundation = { git = 'https://github.com/microsoft/amplifier-foundation', branch = 'main' }

[dependency-groups]
dev = [
    'pytest>=8.4.2',
    'pytest-asyncio>=0.24.0',
    'ruff>=0.6.0',
    'pyright>=1.1.380',
    "pytest-timeout>=2.4.0",
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = ['E','F','I','B','UP','RUF']
ignore = ['E501']

[tool.pytest.ini_options]
testpaths = ['packages', 'tests']
pythonpath = ['src']
addopts = '--import-mode=importlib -ra'
asyncio_mode = 'strict'
markers = ['integration: slow end-to-end tests requiring full install']
