[project]
name = 'amplifier-agent-client'
version = '0.3.0'
requires-python = '>=3.12'
license = 'MIT'
dependencies = [
    'amplifier-agent',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_agent_client"]

[tool.uv.sources]
amplifier-agent = { workspace = true }

[dependency-groups]
dev = [
    'pytest>=8.4.2',
    'pytest-asyncio>=0.24.0',
    'pytest-timeout>=2.4.0',
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = ['E','F','I','B','UP','RUF']
ignore = ['E501']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']
addopts = '--import-mode=importlib -ra'
asyncio_mode = 'strict'
